Lista página Conocenos + detalles de footer y menu

--- a/pages/escritor_alicia.html
+++ b/pages/escritor_alicia.html
@@ -15,14 +15,14 @@
         <!--* =====================M E N U  -  R E S P O S I V E===================== -->
         <!--* ======================================================================= -->
         <header class="header">
-            <h2>Bibliocinéfilo</h2>
+            <h2 id="title">Bibliocinéfilo</h2>
             <nav class="nave">
                 <ul class="menu" id="menu">
                     <li class="item">
                         <a href="../index.html" class="link">Inicio</a>
                     </li>
                     <li class="item">
-                        <a href="#" class="link">Libros</a>
+                        <a href="#" class="link">Escritores</a>
                     </li>
                     <!-- <li class="item">
                         <a href="#" class="link">Géneros</a>
@@ -36,12 +36,13 @@
                 </ul>
             </nav>
             <li class="user">
-                <i class="fa-solid fa-user " style="color: #ffffff;"></i>
+                <i class="fa-solid fa-user " style="color: #ffffff;" title="Regístrate o Inicia sesión"></i>
             </li>
             <div class="hamburger" id="hamburger">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </header>
+
 
         <!--? ========================================================================= -->
         <!--? ======================= C  O  N  T  E  N  I  D  O  ====================== -->
@@ -114,7 +115,8 @@
             <div class="redes ">
                 <h4 class="text-white">Contáctanos</h4>
                 <a href="#"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a>
+                <!-- <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a> -->
+                <a href="../pages/conocenos.html"><i class="fa-sharp fa-solid fa-people-group"style="color: #ffffff;"></i></a>
                 <a href="#"><i class="fa-regular fa-envelope" style="color: #ffffff;"></i></i> </a>
             </div>
 
