--- a/pages/escritor_señor_anillos.html
+++ b/pages/escritor_señor_anillos.html
@@ -22,7 +22,7 @@
                         <a href="../index.html" class="link">Inicio</a>
                     </li>
                     <li class="item">
-                        <a href="#" class="link">Libros</a>
+                        <a href="#" class="link">Escritores</a>
                     </li>
                     <!-- <li class="item">
                         <a href="#" class="link">Géneros</a>
@@ -104,7 +104,8 @@
             <div class="redes ">
                 <h4 class="text-white">Contáctanos</h4>
                 <a href="#"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a>
+                <!-- <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a> -->
+                <a href="../pages/conocenos.html"><i class="fa-sharp fa-solid fa-people-group"style="color: #ffffff;"></i></a>
                 <a href="#"><i class="fa-regular fa-envelope" style="color: #ffffff;"></i></i> </a>
             </div>
 
