--- a/pages/escritor_soy_leyenda.html
+++ b/pages/escritor_soy_leyenda.html
@@ -22,7 +22,7 @@
                         <a href="../index.html" class="link">Inicio</a>
                     </li>
                     <li class="item">
-                        <a href="#" class="link">Libros</a>
+                        <a href="#" class="link">Escritores</a>
                     </li>
                     <!-- <li class="item">
                         <a href="#" class="link">Géneros</a>
@@ -54,7 +54,7 @@
             <p>Richard Matheson fue un escritor y guionista estadounidense de fantasía, ciencia ficción y terror.</p>
             <p>Su primer cuento publicado, “Nacido de hombre y mujer”, lo hizo famoso por su originalidad y horror. 
                 El relato narra en primera persona la vida de un niño monstruoso que vive encadenado en el sótano de sus padres</p>
-            <p>Su novela más conocida, <span class="link-peli"> <a href="../pages/pelicula_soy_leyenda.html">Soy leyenda </a></span>, 
+            <p>Su novela más conocida, <span class="link-peli"> <a href="../pages/pelicula_leyenda.html">Soy leyenda </a></span>, 
                 ha sido adaptada al cine en varias ocasiones, pero ninguna de ellas ha sido fiel al final original, 
                 que plantea una reflexión sobre la naturaleza del bien y el mal.</p>
                 <p>Su obra ha influido en muchos escritores de terror y ciencia ficción, entre ellos Stephen King, quien lo considera 
@@ -104,7 +104,8 @@
             <div class="redes ">
                 <h4 class="text-white">Contáctanos</h4>
                 <a href="#"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a>
+                <!-- <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a> -->
+                <a href="../pages/conocenos.html"><i class="fa-sharp fa-solid fa-people-group"style="color: #ffffff;"></i></a>
                 <a href="#"><i class="fa-regular fa-envelope" style="color: #ffffff;"></i></i> </a>
             </div>
 
