--- a/pages/pelicula_harry.html
+++ b/pages/pelicula_harry.html
@@ -18,7 +18,7 @@
                         <a href="../index.html" class="link">Inicio</a>
                     </li>
                     <li class="item">
-                        <a href="#" class="link">Libros</a>
+                        <a href="#" class="link">Escritores</a>
                     </li>
                      <!-- <li class="item">
                         <a href="#" class="link">Géneros</a>
@@ -46,9 +46,12 @@
             <h1>Harry Potter y la Cámara Secreta</h1>
             <p>Cuando las vacaciones en casa de sus tíos comenzaban a ser insoportables, un elfo sorprende a Harry Potter y le informa del peligro que se cierne sobre el Colegio Howarts de Magia. A modo de advertencia, aconseja al joven aprendiz de brujo no regresar a sus cursos de hechicería. 
                 A bordo de un coche volador y acompañado de su amigo Ron, un desafío inminente les aguarda. Una nueva aventura que consagra de forma definitiva el maravilloso mundo de Harry Potter surgido de la poderosa imaginación de J.K. Rowling y que abre de par en par las puertas de la fantasía.</p>
+            <p>Harry Potter y la cámara secreta (título original en inglés: Harry Potter and the Chamber of Secrets), es el segundo libro de la serie literaria Harry Potter, escrito por la autora británica <span class="link-peli"><a href="../pages/escritor_harry.html">J. K. Rowling </a></span>en 1998.
+            La trama sigue el segundo año de Harry Potter en el Colegio Hogwarts de Magia y Hechicería, durante el cual una serie de mensajes en las paredes de los pasillos de la escuela advierten que la Cámara de los Secretos ha sido abierta y que el «heredero de Slytherin» matará a todos los alumnos que no provengan de familias con sangre mágica. Dichas amenazas se cumplen con ataques que dejan a los alumnos de la escuela «petrificados». Durante todo el año, Harry y sus amigos Ron Weasley y Hermione Granger investigan sobre los ataques, un hecho similar que había ocurrido años antes, lo cual lleva al protagonista a conocer más la historia de su mayor enemigo, lord Voldemort, quien había asesinado a sus padres cuando era un bebé.</p>
             <p>Año: 2006</p>
             <p>Duración: 161 min.</p> 
             <p>Genero: Fántasía, Misterio, Aventuras.</p>
+            <a class="boton-escritor" href="../pages/escritor_harry.html">Ver más</a>
         </main>
         <div class="trailer">
             <h3>Ver Pelicula</h3>
@@ -74,7 +77,8 @@
             <div class="redes ">
                 <h4 class="text-white">Contáctanos</h4>
                 <a href="#"><i class="fa-brands fa-github"style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"style="color: #ffffff;"></i></a>
+                <!-- <a href="#"><i class="fa-brands fa-linkedin"style="color: #ffffff;"></i></a> -->
+                <a href="../pages/conocenos.html"><i class="fa-sharp fa-solid fa-people-group"style="color: #ffffff;"></i></a>
                 <a href="#"><i class="fa-regular fa-envelope"style="color: #ffffff;"></i></i> </a>
             </div>
         
