--- a/pages/pelicula_leyenda.html
+++ b/pages/pelicula_leyenda.html
@@ -18,7 +18,7 @@
                         <a href="../index.html" class="link">Inicio</a>
                     </li>
                     <li class="item">
-                        <a href="#" class="link">Libros</a>
+                        <a href="#" class="link">Escritores</a>
                     </li>
                      <!-- <li class="item">
                         <a href="#" class="link">Géneros</a>
@@ -44,12 +44,13 @@
         </aside>
         <main class="contenido">
             <h1>Soy Leyenda</h1>
-            <p>Año 2012. Robert Neville es un brillante científico, que, sin embargo, no ha podido impedir la expansión de un incurable virus creado por el hombre. Neville, inexplicablemente inmune al contagio, es el último superviviente humano de la ciudad de Nueva York y, quizá, del mundo. Pero Neville no está completamente solo. Víctimas mutantes de la plaga merodean en las sombras, vigilando cada uno de los movimientos del científico y esperando que cometa un error fatal para beber su sangre.
-            </p>
+            <p>Año 2012. Robert Neville es un brillante científico, que, sin embargo, no ha podido impedir la expansión de un incurable virus creado por el hombre. Neville, inexplicablemente inmune al contagio, es el último superviviente humano de la ciudad de Nueva York y, quizá, del mundo. Pero Neville no está completamente solo. Víctimas mutantes de la plaga merodean en las sombras, vigilando cada uno de los movimientos del científico y esperando que cometa un error fatal para beber su sangre.</p>
+            <p>Soy leyenda (en inglés I Am Legend) es una novela de terror, suspense y ciencia ficción escrita por <span class="link-peli"><a href="../pages/escritor_soy_leyenda.html">Richard Matheson</a></span> y publicada en 1954. El libro se desarrolla en una versión postapocalíptica de la ciudad de Los Ángeles, comprendida entre el año de 1976 y 1979. El protagonista, Robert Neville, ha sobrevivido a una pandemia provocada por una guerra bacteriológica que ha arrasado con todas las personas que había en la Tierra; sin embargo, estos no están muertos, sino que se han convertido en portadores de una bacteria que produce los clásicos síntomas del vampiro mítico, dividiéndose en dos clases: los infectados, quienes en vida contrajeron la bacteria y los vampiros, los muertos que resucitaron gracias a la bacteria.</p>
             <p>Título original: I Am Legend</p>
             <p>Año: 2007</p>
             <p>Duración: 101 min.</p> 
             <p>Genero: Ciencia Ficción, Acción, Suspenso.</p>
+            <a class="boton-escritor" href="../pages/escritor_soy_leyenda.html">Ver más</a>
         </main>
         <div class="trailer">
             <h3>Ver Pelicula</h3>
@@ -76,7 +77,8 @@
             <div class="redes ">
                 <h4 class="text-white">Contáctanos</h4>
                 <a href="#"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a>
+                <!-- <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a> -->
+                <a href="../pages/conocenos.html"><i class="fa-sharp fa-solid fa-people-group"style="color: #ffffff;"></i></a>
                 <a href="#"><i class="fa-regular fa-envelope" style="color: #ffffff;"></i></i> </a>
             </div>
         
