--- a/pages/pelicula_matilda.html
+++ b/pages/pelicula_matilda.html
@@ -18,7 +18,7 @@
                         <a href="../index.html" class="link">Inicio</a>
                     </li>
                     <li class="item">
-                        <a href="#" class="link">Libros</a>
+                        <a href="#" class="link">Escritores</a>
                     </li>
                      <!-- <li class="item">
                         <a href="#" class="link">Géneros</a>
@@ -44,11 +44,13 @@
         </aside>
         <main class="contenido">
             <h1>Matilda</h1>
-            <p>Una niña desarrolla una capacidad mental extraordinaria, a pesar de sus padres descuidados y de una directora abusiva.</p>
+            <p>Matilda Wormwood es una niña sumamente brillante. Sin haber cumplido los cinco años, ya había desarrollado habilidades increíbles para su edad, leído a numerosos autores y atesorado asombrosos conocimientos, sin embargo, sus mediocres padres nunca se preocupan por ella y la obligan a mirar la televisión negándose a comprarle libros; además de dejarla sola todas las tardes.</p>
+            <p>Matilda es el título de un libro escrito por <span class="link-peli"><a href="../pages/escritor_matilda.html">Roald Dahl</a></span>. Inicialmente, fue publicado en 1988 en Londres por Jonathan Cape, con ilustraciones de Quentin Blake. Se hizo una película con el mismo nombre en 1996, dirigida por Danny DeVito, un musical en 2010 a cargo de la Royal Shakespeare Company, y una película adaptada del musical antes mencionado en 2022.</p>
             <p>Título original: Matilda</p>
             <p>Año: 1996</p>
             <p>Duración: 98 min.</p> 
             <p>Genero: Fantasía, Drama, Comedia.</p>
+            <a class="boton-escritor" href="../pages/escritor_matilda.html">Ver más</a>
         </main>
         <div class="trailer">
             <h3>Ver Pelicula</h3>
@@ -75,7 +77,8 @@
             <div class="redes ">
                 <h4 class="text-white">Contáctanos</h4>
                 <a href="#"><i class="fa-brands fa-github"style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"style="color: #ffffff;"></i></a>
+                <!-- <a href="#"><i class="fa-brands fa-linkedin"style="color: #ffffff;"></i></a> -->
+                <a href="../pages/conocenos.html"><i class="fa-sharp fa-solid fa-people-group"style="color: #ffffff;"></i></a>
                 <a href="#"><i class="fa-regular fa-envelope"style="color: #ffffff;"></i></i> </a>
             </div>
         
