--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -17,14 +17,14 @@
         <!--* =====================M E N U  -  R E S P O S I V E===================== -->
         <!--* ======================================================================= -->
         <header class="header">
-            <h2>Bibliocinéfilo</h2>
+            <h2 id="title">Bibliocinéfilo</h2>
             <nav class="nave">
                 <ul class="menu" id="menu">
                     <li class="item">
                         <a href="../index.html" class="link">Inicio</a>
                     </li>
                     <li class="item">
-                        <a href="#" class="link">Libros</a>
+                        <a href="#" class="link">Escritores</a>
                     </li>
                     <!-- <li class="item">
                         <a href="#" class="link">Géneros</a>
@@ -44,7 +44,10 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
         </header>
-
+        <div id="popup" class="hidden">
+            <p class="description">"Explora el mundo mágico del cine a través de las páginas de la literatura"</p>
+            <img src="../img/popup.jpg" alt="Descripción de la imagen">
+        </div>
 
         <!--? ==================================================================== -->
         <!--? ======================= F   I   L   A     1  ======================= -->
@@ -124,7 +127,7 @@
         <div class="fila3">
             <div class="fila">
                 <div class="filaimg">
-                    <img src="../img/us/anonimo.png" alt="Olga Betancourt">
+                    <img src="../img/popup.jpg" alt="Bibliocinéfilos">
                 </div>
                 <div class="descripcion">
                     <h3>Anonimo</h3>
@@ -157,8 +160,9 @@
                 <h4 class="text-white">Contáctanos</h4>
                 <a href="https://github.com/YeisonRios10"><i class="fa-brands fa-github"
                         style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-regular fa-envelope" style="color: #ffffff;"></i></i> </a>
+                <!-- <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a> -->
+                <a href="../pages/conocenos.html"><i class="fa-sharp fa-solid fa-people-group"style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-regular fa-envelope" style="color: #ffffff;"></i> </a>
             </div>
 
             <div class="tecno">
