--- a/pages/pelicula_alicia.html
+++ b/pages/pelicula_alicia.html
@@ -18,7 +18,7 @@
                         <a href="../index.html" class="link">Inicio</a>
                     </li>
                     <li class="item">
-                        <a href="#" class="link">Libros</a>
+                        <a href="#" class="link">Escritores</a>
                     </li>
                      <!-- <li class="item">
                         <a href="#" class="link">Géneros</a>
@@ -38,6 +38,7 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
         </header>
+        
         <aside class="sidebar">
             <img id="slide-alicia" class="imagen" src="../img/alicia/alicia4.jpg"  alt="Alicia en el país de las maravillas">
             <h1>Alicia en el País de las Maravillas</h1>
@@ -45,10 +46,12 @@
         <main class="contenido">
             <h1>Alicia en el País de las Maravillas</h1>
             <p>Alicia, una joven de 19 años, acude a una mansión victoriana para asistir a una fiesta de la alta sociedad. Cuando está a punto de recibir públicamente una propuesta de matrimonio, sale corriendo tras un conejo blanco.</p>
+            <p>Las aventuras de Alicia en el país de las maravillas, comúnmente abreviado como Alicia en el país de las maravillas, es una novela de fantasía escrita por el matemático, lógico, fotógrafo y escritor británico Charles Lutwidge Dodgson, bajo el seudónimo de <span class="link-peli"><a href="../pages/escritor_alicia.html">Lewis Carroll</a></span>, publicada en 1865. La historia cuenta cómo una niña llamada Alicia cae por un agujero, encontrándose en un mundo peculiar y extraño, poblado por humanos y criaturas antropomórficas</p>
             <p>Título original: Alice in Wonderland</p>
             <p>Año: 2010</p>
             <p>Duración: 108 min.</p> 
             <p>Genero: Fántastico, Animación, Aventuras.</p>
+            <a class="boton-escritor" href="../pages/escritor_alicia.html" >Ver más</a>
         </main>
         <div class="trailer">
             <h3>Ver Pelicula</h3>
@@ -75,7 +78,8 @@
             <div class="redes ">
                 <h4 class="text-white">Contáctanos</h4>
                 <a href="#"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a>
+                <!-- <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a> -->
+                <a href="../pages/conocenos.html"><i class="fa-sharp fa-solid fa-people-group"style="color: #ffffff;"></i></a>
                 <a href="#"><i class="fa-regular fa-envelope" style="color: #ffffff;"></i></i> </a>
             </div>
         
