--- a/pages/pelicula_juegos_hambre.html
+++ b/pages/pelicula_juegos_hambre.html
@@ -18,7 +18,7 @@
                         <a href="../index.html" class="link">Inicio</a>
                     </li>
                     <li class="item">
-                        <a href="#" class="link">Libros</a>
+                        <a href="#" class="link">Escritores</a>
                     </li>
                      <!-- <li class="item">
                         <a href="#" class="link">Géneros</a>
@@ -45,10 +45,12 @@
         <main class="contenido">
             <h1>Los Juegos del Hambre</h1>
             <p>Para demostrar su poder, el régimen del estado totalitario de Panem organiza cada año "Los juegos del hambre". En ellos, 24 jóvenes compiten el uno contra el otro en una batalla en la que solo puede haber un superviviente. La joven Katniss se ofrece voluntaria para participar en los juegos para salvar a su hermana. Junto a ella participará Peeta, un joven al que ha conocido desde la infancia y que está enamorado de ella. Sin embargo, el Capitolio quiere convertirlos en contrincantes.</p>
+            <p>Los juegos del hambre (título original en inglés: The Hunger Games) es una película de ciencia ficción, acción y drama. Dirigida por Gary Ross y basada en la novela best-seller del mismo nombre de <span class="link-peli"><a href="../pages/escritor_juegos_del_hambre.html">Suzanne Collins</a></span>. Está protagonizada por Jennifer Lawrence, Josh Hutcherson, Elizabeth Banks, Liam Hemsworth y Woody Harrelson. Fue lanzada el 21 de marzo de 2012 en Francia y otros países,4​ en las Filipinas el 22 de marzo y en los Estados Unidos su estreno fue el 23 de marzo de 2012, al igual que en gran parte de Iberoamérica​ en los cines convencionales e IMAX. En España se estrenó el 20 de abril de 2012.</p>
             <p>Título original: The Hunger Games</p>
             <p>Año: 2012</p>
             <p>Duración: 142 min.</p> 
             <p>Genero: Ciencia Ficción, Acción, Drama.</p>
+            <a class="boton-escritor" href="../pages/escritor_juegos_del_hambre.html">Ver más</a>
         </main>
         <div class="trailer">
             <h3>Ver Pelicula</h3>
@@ -75,7 +77,8 @@
             <div class="redes ">
                 <h4 class="text-white">Contáctanos</h4>
                 <a href="#"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a>
+                <!-- <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a> -->
+                <a href="../pages/conocenos.html"><i class="fa-sharp fa-solid fa-people-group"style="color: #ffffff;"></i></a>
                 <a href="#"><i class="fa-regular fa-envelope" style="color: #ffffff;"></i></i> </a>
             </div>
         
