--- a/pages/pelicula_maze_runner.html
+++ b/pages/pelicula_maze_runner.html
@@ -18,7 +18,7 @@
                         <a href="../index.html" class="link">Inicio</a>
                     </li>
                     <li class="item">
-                        <a href="#" class="link">Libros</a>
+                        <a href="#" class="link">Escritores</a>
                     </li>
                      <!-- <li class="item">
                         <a href="#" class="link">Géneros</a>
@@ -45,10 +45,12 @@
         <main class="contenido">
             <h1>Maze runner</h1>
             <p>Thomas es un adolescente cuya memoria fue borrada y que ha sido encerrado junto a otros chicos de su edad en un laberinto plagado de monstruos y misterios. Para sobrevivir, tendrá que adaptarse a las normas y a los demás habitantes del laberinto.</p>
+            <p>The Maze Runner (El corredor del laberinto en España y Maze Runner: Correr o morir en Hispanoamérica), es una novela distópica escrita por el autor estadounidense <span class="link-peli"><a href="../pages/escritor_maze_runner.html">James Dashner</a></span>, como primer libro de la trilogía homónima. Fue publicado en octubre de 2009 por Delacorte Press, división de Random House Mondadori. Está escrito en tercera persona centrándose especialmente en Thomas, un adolescente que un día despierta en un área verde en la que habitan otros jóvenes de su edad ubicada en el centro de un laberinto, y no consigue recordar más que su nombre; con el pasar del tiempo, tendrá que aprender a convivir con los demás habitantes e irá desentrañando los misterios de cómo llegaron hasta allí. El libro obtuvo reseñas favorables por parte de los críticos, quienes alabaron la atmósfera y el suspense del argumento. Igualmente, ganó numerosos reconocimientos, incluyendo la etiqueta de best-seller.</p>
             <p>Título original: Maze runner</p>
             <p>Año: 2014</p>
             <p>Duración: 113 min.</p> 
             <p>Genero: Ciencia Ficción, Suspenso, Acción.</p>
+            <a class="boton-escritor" href="../pages/escritor_maze_runner.html">Ver más</a>
         </main>
         <div class="trailer">
             <h3>Ver Pelicula</h3>
@@ -74,7 +76,8 @@
             <div class="redes ">
                 <h4 class="text-white">Contáctanos</h4>
                 <a href="#"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a>
+                <!-- <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a> -->
+                <a href="../pages/conocenos.html"><i class="fa-sharp fa-solid fa-people-group"style="color: #ffffff;"></i></a>
                 <a href="#"><i class="fa-regular fa-envelope" style="color: #ffffff;"></i></i> </a>
             </div>
         
@@ -82,8 +85,8 @@
                 <h4 class="text-white ">Tecnologías</h4>
                 <a href="#"> <i class="fa-brands fa-bootstrap" style="color: #ffffff;"></i></a>
                 <a href="#"><i class="fa-brands fa-css3" style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-brands fa-font-a style="color: #ffffff;"wesome" style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-brands fa-html5"></i></a>
+                <a href="#"><i class="fa-brands fa-font-awesome" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-brands fa-html5" style="color: #ffffff;"></i></a>
                 <a href="#"><i class="fa-brands fa-js" style="color: #ffffff;"></i></a>
             </div>
         </footer>
