Pag de escritores - detalles de pag

--- a/pages/escritor_juegos_del_hambre.html
+++ b/pages/escritor_juegos_del_hambre.html
@@ -22,7 +22,7 @@
                         <a href="../index.html" class="link">Inicio</a>
                     </li>
                     <li class="item">
-                        <a href="#" class="link">Escritores</a>
+                        <a href="escritores.html" class="link">Escritores</a>
                     </li>
                     <!-- <li class="item">
                         <a href="#" class="link">Géneros</a>
@@ -118,6 +118,13 @@
             </div>
         </footer>
 
+        <!--! ======================================================================= -->
+        <!--! =====================  B O T O N  S C R O L L  ======================== -->
+        <!--! ======================================================================= -->
+
+        <button id="scrollToTopBtn" title="Ir arriba"></button>
+        </div>
+        </div>
     </div>
 </body>
 
