--- a/pages/pelicula_alicia.html
+++ b/pages/pelicula_alicia.html
@@ -18,7 +18,7 @@
                         <a href="../index.html" class="link">Inicio</a>
                     </li>
                     <li class="item">
-                        <a href="#" class="link">Escritores</a>
+                        <a href="escritores.html" class="link">Escritores</a>
                     </li>
                      <!-- <li class="item">
                         <a href="#" class="link">Géneros</a>
@@ -93,7 +93,14 @@
             </div>
         </footer>
         
+        <!--! ======================================================================= -->
+        <!--! =====================  B O T O N  S C R O L L  ======================== -->
+        <!--! ======================================================================= -->
+
+        <button id="scrollToTopBtn" title="Ir arriba"></button>
+        </div>
+        </div>
     </div>
-    <script src="js/javaScript.js"></script>
+    <script src="../js/javaScript.js"></script>
 </body>
 </html>
