--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -24,7 +24,7 @@
                         <a href="../index.html" class="link">Inicio</a>
                     </li>
                     <li class="item">
-                        <a href="#" class="link">Escritores</a>
+                        <a href="escritores.html" class="link">Escritores</a>
                     </li>
                     <!-- <li class="item">
                         <a href="#" class="link">Géneros</a>
@@ -161,8 +161,8 @@
                 <a href="https://github.com/YeisonRios10"><i class="fa-brands fa-github"
                         style="color: #ffffff;"></i></a>
                 <!-- <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a> -->
-                <a href="../pages/conocenos.html"><i class="fa-sharp fa-solid fa-people-group"style="color: #ffffff;"></i></a>
                 <a href="#"><i class="fa-regular fa-envelope" style="color: #ffffff;"></i> </a>
+                <a href="../pages/conocenos.html"><i class="fa-sharp fa-solid fa-people-group"style="color: #ffffff;"></i></a>
             </div>
 
             <div class="tecno">
@@ -174,6 +174,15 @@
                 <a href="#"><i class="fa-brands fa-js" style="color: #ffffff;"></i></a>
             </div>
         </div>
+
+        <!--! ======================================================================= -->
+        <!--! ========================  F  O  O  T  E  R  =========================== -->
+        <!--! ======================================================================= -->
+        
+        <button id="scrollToTopBtn" title="Ir arriba"></button>
+        </div>
+        </div>
+
     </div>
     <script src="../js/javaScript.js"></script>
     <script src="../js/apis.js"></script>
