--- a/pages/escritor_harry.html
+++ b/pages/escritor_harry.html
@@ -22,7 +22,7 @@
                         <a href="../index.html" class="link">Inicio</a>
                     </li>
                     <li class="item">
-                        <a href="#" class="link">Escritores</a>
+                        <a href="escritores.html" class="link">Escritores</a>
                     </li>
                     <!-- <li class="item">
                         <a href="#" class="link">Géneros</a>
@@ -117,7 +117,13 @@
                 <a href="#"><i class="fa-brands fa-js" style="color: #ffffff;"></i></a>
             </div>
         </footer>
+        <!--! ======================================================================= -->
+        <!--! =====================  B O T O N  S C R O L L  ======================== -->
+        <!--! ======================================================================= -->
 
+        <button id="scrollToTopBtn" title="Ir arriba"></button>
+        </div>
+        </div>
     </div>
 </body>
 
