--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <div class="pelis">
            <div class="tarjeta">
-            <img src="img/alicia/poster-alicia.jpg" alt="Alicia en el Pais de las Maravillas">
+            <img id="alicia" src=" " alt="Alicia en el Pais de las Maravillas">
             <a class="link-peliculas" href="pages/pelicula_alicia.html">Alice in Wonderland</a>
            </div>
            <div class="tarjeta">
