--- a/pages/pelicula_alicia.html
+++ b/pages/pelicula_alicia.html
@@ -39,16 +39,15 @@
             </div>
         </header>
         <aside class="sidebar">
-            <img id="slide-alicia" class="imagen" src="../img/alicia/alicia4.jpg"  alt="Alicia en el país de las maravillas">
+            <img id="slide-alicia" class="imagen" src=" "  alt="Alicia en el país de las maravillas">
             <h1>Alicia en el País de las Maravillas</h1>
         </aside>
         <main class="contenido">
-            <h1>Alicia en el País de las Maravillas</h1>
-            <p>Alicia, una joven de 19 años, acude a una mansión victoriana para asistir a una fiesta de la alta sociedad. Cuando está a punto de recibir públicamente una propuesta de matrimonio, sale corriendo tras un conejo blanco.</p>
-            <p>Título original: Alice in Wonderland</p>
-            <p>Año: 2010</p>
-            <p>Duración: 108 min.</p> 
-            <p>Genero: Fántastico, Animación, Aventuras.</p>
+            <p>Título original: <span id="titulo_original"></span></p><br>
+            <p>Descripcion: <span id="descripcion"></span></p>
+            <p>Año de lanzamiento: <span id="año_de_lanzamiento"></span></p>
+            <p>Duración: <span id="duracion"></span>min</p>
+            <p>Género: <span id="generos"></span></p>
         </main>
         <div class="trailer">
             <h3>Ver Pelicula</h3>
@@ -90,5 +89,6 @@
         </footer>
         
     </div>
+    <script src="../js/javaScript.js"></script>
 </body>
 </html>
