--- a/pages/escritor_matilda.html
+++ b/pages/escritor_matilda.html
@@ -103,19 +103,19 @@
         <footer class="footer">
             <div class="redes ">
                 <h4 class="text-white">Contáctanos</h4>
-                <a href="#"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
+                <a href="https://github.com/YeisonRios10"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
                 <!-- <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a> -->
+                <a href="https://www.instagram.com/bibliocinefilos/"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i> </a>
                 <a href="../pages/conocenos.html"><i class="fa-sharp fa-solid fa-people-group"style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-regular fa-envelope" style="color: #ffffff;"></i></i> </a>
             </div>
 
             <div class="tecno">
                 <h4 class="text-white ">Tecnologías</h4>
-                <a href="#"> <i class="fa-brands fa-bootstrap" style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-brands fa-css3" style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-brands fa-font-awesome" style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-brands fa-html5" style="color: #ffffff;"></i></a>
-                <a href="#"><i class="fa-brands fa-js" style="color: #ffffff;"></i></a>
+                <a href="https://getbootstrap.com/"> <i class="fa-brands fa-bootstrap" style="color: #ffffff;" title="Bootstrap"></i></a>
+                <a href="https://www.w3.org/Style/CSS/"><i class="fa-brands fa-css3" style="color: #ffffff;" title="Css5"></i></a>
+                <a href="https://fontawesome.com/"><i class="fa-brands fa-font-awesome" style="color: #ffffff;" title="Font Awesome"></i></a>
+                <a href="https://html.spec.whatwg.org/multipage/"><i class="fa-brands fa-html5" style="color: #ffffff;" title="Html5"></i></a>
+                <a href="https://www.w3.org/wiki/JavaScript_best_practices"><i class="fa-brands fa-js" style="color: #ffffff;" title="JavaScript"></i></a>
             </div>
         </footer>
 
