resolución de conflictos al hacer el merge

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--* =====================M E N U  -  R E S P O S I V E===================== -->
         <!--* ======================================================================= -->
         <header  class="header">
-            <h2>Bibliocinéfilo</h2>
+            <h2 id="title">Bibliocinéfilo</h2>
             <nav class="nave">
                 <ul class="menu" id="menu">
                     <li class="item">
@@ -42,7 +42,10 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
         </header>
-        
+        <div id="popup" class="hidden">
+            <p class="description">"Explora el mundo mágico del cine a través de las páginas de la literatura"</p>
+            <img src="img/popup.jpg" alt="Descripción de la imagen">
+        </div>
         
         <!--? ======================================================================= -->
         <!--? ======================= C  A  R  R  U  S  E  L  ======================= -->
