--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <div class="modal-body">
             <div class="col-12 user-img">
                 <h1 class="modal-title fs-2 ">Login</h1>
-                <img src="../img/avatar/avatar1.png" alt="">
+                <img src="img/avatar/avatar1.png" alt="">
             </div>
-            <form method="post" action="" class="col-12" onsubmit="return validarFormulario2(event)">
+            <form method="" action="" class="col-12" onsubmit="return validarFormulario2(event)">
                 <div class="form-group correo">
                     <label for="correo">Correo Electrónico</label>
                     <input type="email" id="correo" class="form-control" aria-describedby="emailHelp" placeholder="Usuario o Correo" required>
