corrección en los enlaces del menu

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <a href="#" class="link">Inicio</a>
                     </li>
                     <li class="item">
-                        <a href="../pages/escritores.html" class="link">Escritores</a>
+                        <a href="pages/escritores.html" class="link">Escritores</a>
                     </li>
                      <!-- <li class="item">
                         <a href="#" class="link">Géneros</a>
@@ -156,7 +156,7 @@
                 <a href="https://github.com/YeisonRios10"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
                 <!-- <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a> -->
                 <a href="https://www.instagram.com/bibliocinefilos/"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i> </a>
-                <a href="../pages/conocenos.html"><i class="fa-sharp fa-solid fa-people-group"style="color: #ffffff;"></i></a>
+                <a href="pages/conocenos.html"><i class="fa-sharp fa-solid fa-people-group"style="color: #ffffff;"></i></a>
             </div>
         
             <div class="tecno">
