--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -133,11 +133,10 @@
                     <img src="../img/us/Yeison.jpg" alt="Bibliocinéfilos">
                 </div>
                 <div class="descripcion">
-                    <h3>Bibliocinéfilos</h3>
+                    <h3>Yeison Rios Molina</h3>
                     <p>
-                        Estudiante de Full-Stack (Python) con el Programa Codo a Codo y estudiante de Full-Stack (Java) con la
-                        Academia Egg.
-                        Recién interesada por el desarrollo web, siendo curiosa y autodidacta, aplico lo aprendido en proyectos propios.
+                        Estudiante Full-Stack (Python) con el programa Codo a Codo y estudiante de la Ingeniería de Sistemas en la UNAD. <br>
+                        Un gran apasionado por el desarrollo Web tanto Front-end como Back-end, y con gran conocimiento en el lenguaje de programación Python y su framework Django.
                     </p>
                     
                     <div class="enlaces">
