--- a/pages/escritores.html
+++ b/pages/escritores.html
@@ -53,7 +53,7 @@
         <!--? ======================================================================= -->
         
        <div class="carrusel">
-            <div class="grande">
+            <!-- <div class="grande">
                 <img class="imagen" src="../img/juegos/fondo.jpg" alt="img" >
                 <img class="imagen" src="../img/it/it-cara-globo.webp" alt="img" >
                 <img class="imagen" src="../img/harry/harry.jpg" alt="img" > 
@@ -62,7 +62,14 @@
                 <li class="punto activo"><i class="fa-solid fa-circle" style="color: #ffffff;"></i></li>
                 <li class="punto"><i class="fa-solid fa-circle" style="color: #ffffff;"></i></li>
                 <li class="punto"><i class="fa-solid fa-circle" style="color: #ffffff;"></i></li>
-            </ul>
+            </ul> -->
+            <section>
+                <img src="../img/galeria/dahl.jpg" alt="">
+                <img src="../img/galeria/Rowling.webp" alt="">
+                <img src="../img/galeria/james.jpg" alt="">
+                <img src="../img/galeria/suzanne.jpg" alt="">
+                <img src="../img/galeria/tolkien.jpg" alt="">
+            </section>
         </div>
 
         
