--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="#" class="link">Inicio</a>
                     </li>
                     <li class="item">
-                        <a href="../pages/escritores.html" class="link">Escritores</a>
+                        <a href="pages/escritores.html" class="link">Escritores</a>
                     </li>
                      <!-- <li class="item">
                         <a href="#" class="link">Géneros</a>
